# tiny-RAG

./: .cursurrules  .cursurrulesdebugger  .gitignore  FeatureMap.md  LICENSE  ProjectStructure.md  README.md  docker-compose.yml  env.example  env.template  llama-index-instruction  package-lock.json  test_doc.txt  test_enhanced_llamaindex_metadata.py  test_enhanced_metadata.txt  test_enhanced_metadata_doc.txt  test_enhanced_new.txt  test_enhanced_simple.txt  test_enhanced_upload_api.py  test_llamaindex.txt  test_llamaindex_metadata_direct.py  test_llamaindex_upload.py  test_text_summary_metadata.py  upload_response.json
Docs/: ChangeLog.md  Contributing.md  DevEnvConfig.md  FAQ.md  LLM-Setup-Guide.md  ProjectStructureAIGenerated.md  Service-Startup-Guide.md  TechDebt.md  TinyRAG-v1.4-API-Documentation.md  V1.3.1-LLM-API-Testing-Guide.md  Version1.2-Implementation-Plan.md  VersionPlanAIGenerated.md
Docs/Auth/: AuthorizationGuide.md
Docs/DebugLog/: 2025-01-27-Element-Detail-Page-404-Route-Fix.md  2025-01-27-Element-Variable-RAG-Integration-Design.md  2025-01-27-Generation-Count-Frontend-Data-Type-Debug.md  2025-01-27-Generation-UI-Display-Fix.md  2025-01-27-Project-Stats-Document-Count-and-Element-Generation-Fix.md  2025-01-27-UI-Text-Contrast-Global-Accessibility-Fix.md  2025-06-27-Dashboard-Document-Count-and-Delete-Buttons-Fix.md  2025-06-27-Dashboard-Stats-Mock-Data-Fix.md  2025-06-27-Document-Upload-404-Route-Fix.md  2025-06-27-Document-Upload-Structure-Redesign.md  2025-06-27-Elements-API-Pagination-and-UI-Color-Fix.md  2025-06-27-Elements-Page-Mock-Data-to-Real-API-Fix.md  2025-06-27-Frontend-TypeScript-Errors-Fix.md  2025-06-27-Login-Authentication-Loading-Bug-Fix.md  2025-06-27-Project-Creation-Input-Focus-Debug.md  2025-06-27-Project-Creation-Navigation-Fix.md  (+16 more)
Docs/Todo/: V1.3.1-TestingPlan.md  (+12 more)
assets/: ENG_README.md  PM_README.md  diagram.mmd
rag-memo-api/: Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  api_test_results.json  comprehensive_test_results.json  database.py  dependencies.py  env.example  main.py  performance_test.py  prompt_template.py  pytest.ini  requirements.txt  run_all_tests.py  temp_test_doc.txt  test_api_comprehensive.py  test_chunking.txt  test_chunks_response.txt  test_direct_content_extraction.py  test_enhanced_metadata.py  test_enhanced_upload.py
rag-memo-core-lib/: Dockerfile  README.md  pyproject.toml  requirements.txt  simple_test.py  test_abstractions_demo.py
rag-memo-core-lib/src/rag_memo_core_lib/: __init__.py
rag-memo-core-lib/src/rag_memo_core_lib/abstractions/: __init__.py  base.py  llm.py  vector_store.py
rag-memo-core-lib/src/rag_memo_core_lib/config/: __init__.py  constants.py  database.py  settings.py
rag-memo-core-lib/src/rag_memo_core_lib/exceptions/: __init__.py  base.py  evaluation_exceptions.py  generation_exceptions.py  llm_exceptions.py  processing_exceptions.py  vector_store_exceptions.py
rag-memo-core-lib/src/rag_memo_core_lib/factories/: __init__.py  llm_factory.py  vector_store_factory.py
rag-memo-core-lib/src/rag_memo_core_lib/implementations/: __init__.py
rag-memo-core-lib/src/rag_memo_core_lib/implementations/llm/: __init__.py  mock_provider.py
rag-memo-core-lib/src/rag_memo_core_lib/metadata/: __init__.py  enhanced_reranker.py  llm_extractors.py  reranker.py  schemas.py
rag-memo-core-lib/src/rag_memo_core_lib/models/: __init__.py  document.py  generation.py  llm.py
rag-memo-core-lib/src/rag_memo_core_lib/services/: __init__.py
rag-memo-core-lib/src/rag_memo_core_lib/services/llm/: factory.py
rag-memo-core-lib/src/rag_memo_core_lib/services/parsers/: factory.py
rag-memo-core-lib/src/rag_memo_core_lib/services/rag/: factory.py
rag-memo-core-lib/src/rag_memo_core_lib/workers/: __init__.py  main.py
rag-memo-core-lib/tests/: conftest.py
rag-memo-core-lib/tests/abstractions/: __init__.py  test_llm_abstractions.py
rag-memo-core-lib/tests/services/: test_document_processor.py  test_evaluation.py  test_rag.py
rag-memo-knowledge/: index.html
rag-memo-ui/: Dockerfile  README.md  UIUX_master_prompt_templates.md  env.example  fix-typescript-errors.js  jest.setup.js  next.config.ts  package-lock.json  package.json
rag-memo-worker/: Dockerfile  requirements.txt
scripts/: mongo-init.js  start-all-services.sh  start-tinyrag.sh
tiny-rag-be/: README.md
tiny-rag-fe/: README.md
(+180 files in other folders)
